# kyozai-kobo-oss

./: .gitignore  LICENSE  README.md  THIRD_PARTY_NOTICES.md
kyozai-kobo/: .gitignore  README.md  TEMPLATE_GUIDE.md  USER_GUIDE.md  index.html  package-lock.json  package.json  vite.config.ts
kyozai-kobo/.claude/: launch.json
kyozai-kobo/public/: manifest.webmanifest  sw.js
kyozai-kobo/scripts/: setup-tailscale-serve.ps1
kyozai-kobo/src/: App.tsx  api.ts  graphIntegration.ts  index.css  main.tsx  mathjax.ts  store.ts  transport.ts  types.ts
kyozai-kobo/src-tauri/: Cargo.toml  tauri.conf.json
kyozai-kobo/src-tauri/examples/: server_dev.rs
kyozai-kobo/src-tauri/icons/: icon.icns
kyozai-kobo/src-tauri/src/: db.rs  lib.rs  main.rs  models.rs  state.rs
kyozai-kobo/src-tauri/src/ai/: mod.rs
kyozai-kobo/src-tauri/src/codex/: mod.rs  provider.rs
kyozai-kobo/src-tauri/src/commands/: attachments.rs  bank.rs  dispatch.rs  graph_integration.rs  graph_web.rs  graphs.rs  latex.rs  mod.rs  parts.rs  problems.rs  projects.rs  sample.rs  settings.rs  templates.rs  tree.rs
kyozai-kobo/src-tauri/src/server/: auth.rs  backup.rs  mod.rs  system.rs
kyozai-kobo/src-tauri/tests/: core_flows.rs  server_api.rs
kyozai-kobo/src-tauri/tests/fixtures/: moving_segment_rotation_volume.tex  trajectory_hyperbola_midpoint.tex
mathgraph-pdf-studio/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
mathgraph-pdf-studio/.claude/: launch.json
mathgraph-pdf-studio/docs/: 入力ルール.md
mathgraph-pdf-studio/src/: App.tsx  index.css  types.ts
mathgraph-pdf-studio/src-tauri/: Cargo.toml  tauri.conf.json
mathgraph-pdf-studio/src-tauri/capabilities/: default.json
mathgraph-pdf-studio/src-tauri/icons/: icon.icns
mathgraph-pdf-studio/src-tauri/src/: main.rs
(+48 files in other folders)
