[package]
name = "mathgraph-pdf-studio"
version = "0.1.0"
description = "数式・不等式をグラフ化して教材用A4 PDFを出力するデスクトップアプリ"
authors = ["Ryoma"]
edition = "2021"
license-file = "../../LICENSE"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
